--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.4",
+    "@web3-react/walletlink-connector": "^6.2.8",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "decimal.js": "^10.2.1",
