--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "lodash": "^4.17.21",
     "lodash.flatmap": "^4.5.0",
     "moment": "^2.29.1",
-    "node-sass": "4.14.1",
     "quickswap-sdk": "git@github.com:QuickSwap/QuickSwap-sdk.git",
     "react": "^17.0.1",
     "react-device-detect": "^1.17.0",
@@ -52,6 +51,7 @@
     "react-svg": "^11.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.9",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.1"
   },
@@ -78,6 +78,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
